# christmas2017

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SConscript  SConstruct  blahn.cpp  build_dophax.sh  clean_gen.sh  forgotten_woods.dpx  game.dpx  spring.dpx  spring_template.dpx  tables.sh  vastinia.dpx
assets/: christmas.module
data/raw/: bgtiles.xcf  centertiles.xcf  energyball.xcf  fog.xcf  noise.xcf  slime.xcf  wizard.xcf
imgui/: imgui_demo.cpp
spring/: spring.dpx  tables.sh
spring/spr/: glm.hpp
spring/spr/debug/: debug.hpp  debuggui.cpp  debuggui.hpp  debugprint.hpp  debugrenderer.cpp  debugrenderer.hpp
spring/spr/entity/: entityutil.cpp  entityutil.hpp
spring/spr/entitystates/: condition.cpp  condition.hpp  duration.hpp  entitystateslogic.cpp  entitystateslogic.hpp  registerstateset.cpp  registerstateset.hpp  statecontext.hpp  stateexecutor.hpp  statehash.hpp  stateset.hpp  stateutil.cpp  stateutil.hpp  transitions.hpp
spring/spr/hash/: stringhash.cpp  stringhash.hpp
spring/spr/orientation/: orientation.hpp  orientationutil.cpp  orientationutil.hpp
spring/spr/physics/: aabb.hpp  aabbutil.cpp  aabbutil.hpp  collisioncontext.hpp  collisionexecutor.hpp  collisionlogic.cpp  collisionlogic.hpp  collisiontype.hpp
spring/spr/random/: random.hpp
spring/spr/rendering/: rendercontext.hpp  renderlogic.cpp  renderlogic.hpp  renderpass.hpp
spring/spr/rendering/drawables/: imguidrawable.cpp  imguidrawable.hpp  line.cpp  line.hpp  linerect.cpp  linerect.hpp
spring/spr/rendering/renderpasses/: debugrenderpass.cpp  debugrenderpass.hpp  imguirenderpass.cpp  imguirenderpass.hpp  spriterenderpass.cpp  spriterenderpass.hpp
spring/spr/tables/: tablemodule.hpp
spring/spr/tostring/: glm.hpp  tostringlist.cpp  tostringlist.hpp
spring/templates/: addutil.dpt  debugguidata.dpt  showdatatables.dpt  tablecapacity.dpt  tables.dpt  tablesregistering.dpt
src/: changeme.cpp  changeme.hpp  chunkviewdata.hpp  debug.cpp  debug.hpp  debuggui.cpp  debuggui.hpp  debugrenderer.cpp  direction.hpp  directionutil.cpp  directionutil.hpp  extragamedata.hpp  forgottenwoods.cpp  forgottenwoods.hpp  game.cpp  game.hpp  gamedata.cpp  gamedata.hpp  glm.hpp  layeredtiles.hpp  main.cpp  messages.hpp  orientation.hpp  orientationutil.cpp  orientationutil.hpp  random.cpp  random.hpp  renderingutil.cpp  renderingutil.hpp  renderlogic.cpp  renderlogic.hpp  spring_template.cpp  spring_template.hpp  startupconstants.hpp  stringhash.cpp  stringhash.hpp  tileutil.cpp  tileutil.hpp  tostring.cpp  tostring.hpp  (+4 more)
src/audio/: audioutil.cpp  audioutil.hpp
src/background/: background.cpp  background.hpp
src/blood/: blood.cpp  blood.hpp
src/camera/: camera.hpp  cameralogic.cpp  cameralogic.hpp
src/child/: child.cpp  child.hpp
src/constants/: constants.cpp  constants.hpp  world.hpp
src/entity/: entity.hpp  entitylogic.cpp  entitylogic.hpp  entityproperties.cpp  entityproperties.hpp  entityutil.cpp  entityutil.hpp
src/entitystates/: condition.cpp  condition.hpp  duration.hpp  energyballstates.cpp  energyballstates.hpp  entitystates.cpp  entitystateslogic.cpp  entitystateslogic.hpp  executor.hpp  playerstates.cpp  slimestates.cpp  slimestates.hpp  statecontext.hpp  stateexecutor.hpp  statehash.hpp  stateset.hpp  stateutil.cpp  stateutil.hpp  transitions.hpp
src/entitystates/states/: energyballstates.cpp  entitystates.cpp  entitystates.hpp  playerstates.cpp  playerstates.hpp  registerstateset.cpp  registerstateset.hpp  slimestates.cpp
src/input/: input.hpp  inputgroup.hpp
src/land/: chunk.hpp  chunklogic.cpp  chunklogic.hpp  chunkpipeline.cpp  chunkpipeline.hpp  chunkutil.cpp  chunkutil.hpp  goodness.cpp  goodness.hpp  tile.hpp  tileutil.cpp  tileutil.hpp
src/physics/: aabb.hpp  aabbutil.cpp  aabbutil.hpp  collisioncontext.hpp  collisionexecutor.hpp  collisionlogic.cpp  collisionlogic.hpp  collisiontype.hpp
src/player/: inputlogic.cpp  inputlogic.hpp  playeraction.hpp  playerlogic.cpp  playerlogic.hpp
src/rendering/: chunkviewdata.hpp  debugrenderpass.cpp  debugrenderpass.hpp  effectoverlaydata.hpp  imguirenderpass.cpp  imguirenderpass.hpp  overlayrenderpass.cpp  overlayrenderpass.hpp  rendercontext.hpp  renderingutil.cpp  renderingutil.hpp  renderlogic.cpp  renderlogic.hpp  renderpass.hpp  renderpasses.cpp  renderpasses.hpp  spriterenderpass.cpp  spriterenderpass.hpp  tilerenderpass.cpp  tilerenderpass.hpp
src/rendering/renderpasses/: debugrenderpass.cpp  debugrenderpass.hpp  imguirenderpass.cpp  imguirenderpass.hpp  overlayrenderpass.cpp  overlayrenderpass.hpp  renderpasses.cpp  renderpasses.hpp  spriterenderpass.cpp  spriterenderpass.hpp  tilerenderpass.cpp  tilerenderpass.hpp
src/resources/: animationutil.cpp  animationutil.hpp  texturemaker.hpp  textureutil.cpp  textureutil.hpp
src/spawning/: spawning.hpp  spawnplayer.cpp  spawnplayer.hpp  spawnprojectile.cpp  spawnprojectile.hpp  spawnslime.cpp  spawnslime.hpp
templates/: addutil.dpt  debugguidata.dpt  entityaddremove.dpt  gamedata.dpt  showdatatables.dpt  tablecapacity.dpt  tables.dpt  tablesregistering.dpt
